Fix track panel for IE 11; Hidden maximize button on iOS; Readded fix that removes gray rectangle on post tap;

--- a/public/styles/hacks.scss
+++ b/public/styles/hacks.scss
@@ -74,7 +74,7 @@ md-toolbar {
 }
 
 md-toolbar, md-toolbar-row {
-  min-height: unset !important;
+  min-height: 32px !important;
   height: 32px !important;
   line-height: 32px !important;
   font-size: 18px !important;
